<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rr1_bringup</name>
  <version>0.0.0</version>
  <description>ROS2 bringup package for desktop robotic arm RR1 containing all the launch files.</description>
  <maintainer email="chudyja1@fit.cvut.cz">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Execution dependencies -->
  <!-- <exec_depend>pkg_name</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
