<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rr1_bringup</name>
  <version>0.0.0</version>
  <description>ROS2 bringup package for desktop robotic arm RR1 containing all the launch files.</description>
  <maintainer email="chudyja1@fit.cvut.cz">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Execution dependencies -->
  <exec_depend>rr1_description</exec_depend>
  <exec_depend>rr1_rviz</exec_depend>
  <exec_depend>rr1_gazebo</exec_depend>
  <exec_depend>rr1_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>